--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.1.0",
+    "@mui/system": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.1",
     "mosque-finder-frontend2": "file:",
     "react": "^19.1.0",
